Bug 259203 - uninstalling current non-default theme breaks browser (part 1, chrome registry bulletproofing) r=darin